# apps/api/openapi.json
@@ -18,7 +18,18 @@
     "/api/trainings": {
       "get": {
         "operationId": "findAllTrainings",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "date",
+            "required": true,
+            "in": "query",
+            "description": "Calendar date (YYYY-MM-DD)",
+            "schema": {
+              "example": "2026-06-02",
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "",
@@ -32,6 +43,9 @@
                 }
               }
             }
+          },
+          "400": {
+            "description": "Query parameter \"date\" is required"
           }
         },
         "summary": "",
@@ -43,7 +57,18 @@
     "/api/trainings/first": {
       "get": {
         "operationId": "findFirstTrainings",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "date",
+            "required": true,
+            "in": "query",
+            "description": "Calendar date (YYYY-MM-DD)",
+            "schema": {
+              "example": "2026-06-02",
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "",
@@ -57,6 +82,9 @@
                 }
               }
             }
+          },
+          "400": {
+            "description": "Query parameter \"date\" is required"
           }
         },
         "summary": "",
